grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.edecl,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    pragma: ($) => seq(
      "pragma",
      field("id", $.id),
      $._version_expr,
      ";"
    ),

    // Version-expression (version-expr)
    //
    // version-expr →	version-expr || version-expr0
    //  	          →	version-expr0
    _version_expr: ($) =>
      prec.left(
        1,
        choice(seq($._version_expr, $.or, $._version_expr0), $._version_expr0),
      ),

    // Version-expression0 (version-expr0)
    //
    // version-expr0 → version-expr0 && version-term
    //  	           → version-term
    cdefn: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("pure", $.pure)),
        "circuit",
        field("id", $.function_name),
        optional(field("gparams", $.gparams)),
        "(",
        commaSep(field("parg", $.parg)),
        ")",
        ":",
        field("type", $.type),
        field("body", $.block),
      ),

    // External-declaration (edecl)
    //
    // edecl → export^opt circuit id gparams^opt ( arg , … , arg ) : type ;
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),
    
    tref: ($) => prec.left(seq(field("id", $.id), optional(field("gargs", $.gargs)))),

    // Type-size (tsize)
    //
    // tsize → nat
    //       → id
    block: ($) => seq("{", repeat(field("stmt", $.stmt)), "}"),

    // Statement (stmt)
    //
    // stmt → expr = expr ;
    //      → expr += expr ;
    //      → expr -= expr ;
    //      → expr-seq ;
    //      → return expr-seq ;
    //      → return ;
    //      → if ( expr-seq ) stmt else stmt
    //      → if ( expr-seq ) stmt
    //      → for ( const id of nat .. nat ) stmt
    //      → for ( const id of expr-seq ) stmt
    //      → assert expr str ;
    //      → const pattern = expr ;
    //      → const pattern : type = expr ;
    //      → block
    stmt: ($) =>
      prec.right(
        choice(
          $.assign_stmt,
          $.expression_sequence_stmt,
          $.return_stmt,
          $.if_stmt,
          $.for_stmt,
          $.assert_stmt,
          $.const_stmt,
          $.block,
        ),
      ),
    
      // Assert statement
    assert_stmt: ($) => seq("assert", field("condition", $.expr), field("message", $.str), ";"),
      return_stmt: ($) => seq("return", optional(field("value", $.expr_seq)), ";"),
      if_stmt: ($) => prec.right(seq("if", "(", field("condition", $.expr_seq), ")", field("then_branch", $.stmt), optional(seq("else", field("else_branch", $.stmt))))),
      for_stmt: ($) => seq("for", "(", "const", field("counter", $.id), "of", 
          choice(
            seq(field("range_start", $.nat), "..", field("range_end", $.nat)),
            field("limit", $.expr_seq),
          ),
          ")", field("body", $.stmt)),
      expression_sequence_stmt: ($) => seq($.expr_seq, ";"),
      assign_stmt: ($) => seq(field("target", $.expr), field("operator", choice("=", "-=", "+=")), field("value", $.expr), ";"),
      const_stmt: ($) => seq("const", field("pattern", $.pattern), optional(seq(":", field("type", $.type))), "=", field("value", $.expr), ";"),

    // Pattern (pattern)
    //
    // pattern → id
    //        → [ pattern-tuple-elt , … , pattern-tuple-elt ]
    //        → { pattern-struct-elt , … , pattern-struct-elt }
    pattern: ($) =>
      choice(
        field("id", $.id),
        field("pattern_tuple", seq("[", optional(commaSep(field("pattern_tuple_elt", $.pattern_tuple_elt))), "]")),
        field("pattern_struct", seq("{", commaSep1(field("pattern_struct_elt", $.pattern_struct_elt)), "}")),
      ),

    // Pattern-tuple-element (pattern-tuple-elt)
    //
    // pattern-tuple-elt → (empty)
    //                   → pattern
    pattern_tuple_elt: ($) => $.pattern,

    // Pattern-struct-element (pattern-struct-elt)
    //
    // pattern-struct-elt → id
    //                    → id : pattern
    expr_seq: ($) =>
      choice(field("expr", $.expr), seq(field("expr", $.expr), repeat1(seq(",", field("expr", $.expr))), ",", field("expr", $.expr))),

    // Expression (expr)
    //
    // expr → expr0 ? expr : expr
    //      → expr0
    conditional_expr: ($) =>
      seq(
        field("condition", $._expr0),
        "?",
        field("then_branch", $.expr),
        ":",
        field("else_branch", $.expr)
      ),

    expr: ($) => choice($.conditional_expr, $._expr0),

    // Expression0 (expr0)
    //
    // expr0 → expr0 || expr1
    //       → expr1
    or_expr: ($) => seq(field("left", $._expr0), $.or, field("right", $._expr1)),

    _expr0: ($) => prec.left(choice($.or_expr, $._expr1)),

    // Expression1 (expr1)
    //
    // expr1 → expr1 && expr2
    //       → expr2
    and_expr: ($) => seq(field("left", $._expr1), $.and, field("right", $._expr2)),
    _expr1: ($) => prec.left(choice($.and_expr, $._expr2)),

    // Expression2 (expr2)
    //
    // expr2 → expr2 == expr3
    //       → expr2 != expr3
    //       → expr3
    comparison_expr : ($) => seq(field("left", $._expr2), field("operator", choice($.equals, $.not_equals)), field("right", $._expr3)),
    _expr2: ($) =>
      prec.left(
        choice(
          $.comparison_expr,
          $._expr3,
        ),
      ),

    // Expression3 (expr3)
    //
    // expr3 → expr4 < expr4
    //       → expr4 <= expr4
    //       → expr4 >= expr4
    //       → expr4 > expr4
    //       → expr4
    rel_comparison_expr: ($) => seq(field("left", $._expr3), field("operator", choice($.less_than, $.less_than_or_equal, $.greater_than_or_equal, $.greater_than)), field("right", $._expr4)),
    _expr3: ($) =>
      prec.left(
        choice(
          $.rel_comparison_expr,
          $._expr4,
        ),
      ),

    // Expression4 (expr4)
    //
    // expr4 → expr4 as type
    //       → expr5
    cast_expr : ($) => seq(field("expr", $._expr4), "as", field("type", $.type)),
    _expr4: ($) => prec.left(4, choice($.cast_expr, $._expr5)),

    // Expression5 (expr5)
    //
    // expr5 → expr5 + expr6
    //       → expr5 - expr6
    //       → expr6
    bin_sum_expr : ($) => seq(field("left", $._expr5), field("operator", choice("+", "-")), field("right", $._expr6)),
    _expr5: ($) =>
      prec.left(
        choice(
          $.bin_sum_expr,
          $._expr6,
        ),
      ),

    // Expression6 (expr6)
    //
    // expr6 → expr6 * expr7
    //       → expr7
    bin_mul_expr : ($) => prec.left(seq(field("left", $._expr6), field("operator", "*"), field("right", $._expr7))),
    _expr6: ($) => choice($.bin_mul_expr, $._expr7),

    // Expression7 (expr7)
    //
    // expr7 → ! expr7
    //       → expr8
    not_expr: ($) => seq($.not, field("expr", $._expr7)),
  
    _expr7: ($) => choice($.not_expr, $._expr8),

    // Expression8 (expr8)
    //
    // expr8 → expr8 [ expr ]
    //       → expr8 . id
    //       → expr8 . id ( expr , … , expr )
    //       → term
    index_access_expr: ($) => prec.left(seq(field("base", $._expr8), "[", field("index", $.expr), "]")),
    member_access_expr: ($) => prec.left(seq(field("base", $._expr8), ".", field("member", $.id), optional(field("arguments", seq("(", commaSep(field("expr", $.expr)), ")"))))),
    _expr8: ($) =>
      prec.left(
        choice(
          $.index_access_expr,
          $.member_access_expr,
          $.term,
        ),
      ),

    // Term (term)
    //
    // term → lit
    //      → default < type >
    //      → map ( fun , expr , …¹ , expr )
    //      → fold ( fun , expr , expr , …¹ , expr )
    //      → fun ( expr , … , expr )
    //      → disclose ( expr )
    //      → tref { struct-arg , … , struct-arg }
    //      → [ expr , … , expr ,opt ]
    //      → Bytes [ expr , … , expr ,opt ]
    //      → slice < tsize > ( expr , expr )
    //      → id
    //      → ( expr-seq )
    term: ($) =>
      choice(
        $.lit, // Literal (true, false, nat, str, pad)
        $.default_term, // Default value with type
        $.map_term, // Map function with one or more expressions
        $.fold_term, // Fold with initial value and list
        $.function_call_term, // Function call with zero or more expressions
        $.disclose_term, // Disclose with single expression
        $.struct_term, // Struct literal with type reference
        $.array_literal, // Array literal with optional trailing comma
        $.bytes_literal, // Bytes literal
        $.slice_term, // Slice expression
        $.id, // Identifier
        $.expr_seq_term, // Parenthesized expression sequence
      ),

      default_term: ($) => seq("default", "<", field("type", $.type), ">"),
      map_term: ($) => seq("map", "(", field("fun", $.fun), ",", commaSep1(field("expr", $.expr)), ")"),
      fold_term: ($) => seq("fold", "(", field("fun", $.fun), ",", field("init_value", $.expr), ",", commaSep1(field("expr", $.expr)), ")"),
      struct_term: ($) => seq(field("tref", $.tref), "{", commaSep($.struct_arg), "}"),
      function_call_term: ($) => seq(field("fun", $.fun), "(", commaSep(field("expr", $.expr)), ")"),
      disclose_term : ($) => seq("disclose", "(", field("expr", $.expr), ")"),
      array_literal: ($) => seq("[", commaSep(field("element", choice($.expr, $.spread_element))), "]"),
      expr_seq_term: ($) => seq("(", $.expr_seq, ")"),

    // Literal (lit)
    //
    // lit → true
    //     → false
    //     → nat
    //     → str
    //     → pad ( nat , str )
    lit: ($) =>
      choice(
        "true",
        "false",
        $.nat,
        $.str,
        $.pad,
      ),

      pad : ($) => seq("pad", "(", field("nat", $.nat), ",", field("str", $.str), ")"),

    // Structure-argument (struct-arg)
    //
    // struct-arg → expr
    //            → id : expr
    //            → ... expr
    struct_arg: ($) =>
      choice(
        $.expr,
        $.struct_named_filed_initializer,
        $.struct_update_field
      ),

    struct_named_filed_initializer : ($) => seq(field("id", $.id), ":", field("expr", $.expr)),
    fun: ($) =>
      choice(
        seq(field("id", $.id), optional(field("gargs", $.gargs))),
        seq(
          "(",
          commaSep($._pattern_or_parg),
          ")",
          optional(field("return", $._return_type_decl)),
          "=>",
          choice(field("block", $.block), field("expr", $.expr)),
        ),
        seq("(", $.fun, ")"),
      ),

    // Return-type-declaration (return-type-decl)
    //
    // return-type-decl → : type
    _return_type_decl: ($) => seq(":", $.type),

    // Pattern-or-pattern-argument (pattern-or-parg)
    //
    // pattern-or-parg → pattern
    //                 → parg
    _pattern_or_parg: ($) => choice(field("pattern", $.pattern), field("parg", $.parg)),

    // OPS
    equals: ($) => "==",
    not_equals: ($) => "!=",
    greater_than: ($) => ">",
    less_than: ($) => "<",
    greater_than_or_equal: ($) => ">=",
    less_than_or_equal: ($) => "<=",
    not: ($) => "!",
    and: ($) => "&&",
    or: ($) => "||",

    // LITERALS

    // identifier (id, module-name, function-name, struct-name, enum-name, contract-name, tvar-name)
    //
    // identifiers have the same syntax as Typescript identifiers
    id: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    function_name: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    nat: ($) => choice(
      "0",
      /[1-9][0-9]*/,        // decimal
      /0[xX][0-9a-fA-F]+/,  // hexadecimal
      /0[oO][0-7]+/,        // octal
      /0[bB][01]+/          // binary
    ),

    // string-literal (str, file)
    //
    // The basic string-literal rule that matches TypeScript strings
    str: ($) => token(choice(/"[^"]*"/, /'[^']*'/)),
    version: ($) => /[0-9]+(\.[0-9]+){0,2}/,
  },
});

/**
 * Creates a rule for one or more comma-separated occurrences of another rule
 * @param {Rule} rule - The rule to be repeated
 * @returns {SeqRule} A rule that matches one or more occurrences of the input rule separated by commas
 */
function commaSep1(rule) {
  return seq(
    rule,
    repeat(seq(",", rule)),
    optional(","), // Optional trailing comma
  );
}

/**
 * Creates a rule for zero or more comma-separated occurrences of another rule
 * @param {Rule} rule - The rule to be repeated
 * @returns {ChoiceRule} A rule that matches one or more occurrences of the input rule separated by commas
 */
function commaSep(rule) {
  return optional(seq(rule, repeat(seq(",", rule)), optional(",")));
}
